--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "js-cookie": "^2.2.0",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
+    "qiniu": "^7.2.1",
+    "qiniu-js": "^2.5.1",
     "vue": "2.5.10",
     "vue-electron": "^1.0.6",
     "vue-router": "3.0.1",
