--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "axios": "0.17.1",
     "element-ui": "2.3.4",
     "js-cookie": "^2.2.0",
+    "mavon-editor": "^2.6.17",
     "normalize.css": "7.0.0",
     "nprogress": "0.2.0",
     "qiniu": "^7.2.1",
