--- a/package.json
+++ b/package.json
@@ -64,7 +64,8 @@
     "vue": "2.5.10",
     "vue-electron": "^1.0.6",
     "vue-router": "3.0.1",
-    "vuex": "3.0.1"
+    "vuex": "3.0.1",
+    "xlsx": "^0.14.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
