--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "pack": "npm run pack:main && npm run pack:renderer",
     "pack:main": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.main.config.js",
     "pack:renderer": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.renderer.config.js",
+    "pack:cli": "cross-env NODE_ENV=production webpack --progress --colors --config .electron-vue/webpack.excel.cli.js",
     "postinstall": "npm run lint:fix"
   },
   "build": {
