--- a/package.json
+++ b/package.json
@@ -66,7 +66,8 @@
     "vue-electron": "^1.0.6",
     "vue-router": "3.0.1",
     "vuex": "3.0.1",
-    "xlsx": "^0.14.0"
+    "xlsx": "^0.14.0",
+    "yamljs": "^0.3.0"
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
