--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "axios": "0.17.1",
+    "codemirror": "^5.41.0",
     "element-ui": "2.3.4",
     "js-cookie": "^2.2.0",
     "mavon-editor": "^2.6.17",
@@ -63,6 +64,7 @@
     "qiniu": "^7.2.1",
     "qiniu-js": "^2.5.1",
     "vue": "2.5.10",
+    "vue-codemirror": "^4.0.6",
     "vue-electron": "^1.0.6",
     "vue-router": "3.0.1",
     "vuex": "3.0.1",
@@ -71,6 +73,7 @@
   },
   "devDependencies": {
     "babel-core": "^6.25.0",
+    "babel-eslint": "^7.2.3",
     "babel-loader": "^7.1.1",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.0",
@@ -85,10 +88,9 @@
     "del": "^3.0.0",
     "devtron": "^1.4.0",
     "electron": "^1.7.5",
+    "electron-builder": "^19.19.1",
     "electron-debug": "^1.4.0",
     "electron-devtools-installer": "^2.2.0",
-    "electron-builder": "^19.19.1",
-    "babel-eslint": "^7.2.3",
     "eslint": "^4.4.1",
     "eslint-friendly-formatter": "^3.0.0",
     "eslint-loader": "^1.9.0",
@@ -99,10 +101,10 @@
     "multispinner": "^0.2.1",
     "node-loader": "^0.6.0",
     "node-sass": "^4.7.2",
-    "style-loader": "^0.18.2",
     "sass-loader": "6.0.6",
+    "style-loader": "^0.18.2",
     "svg-sprite-loader": "3.5.2",
-    "url-loader": "^0.5.9",
+    "url-loader": "^1.1.2",
     "vue-html-loader": "^1.2.4",
     "vue-loader": "^13.0.5",
     "vue-style-loader": "^3.0.1",
